# dima

./: .clang-format  AUTHORS  README  README.md  TODO  meson.build  meson_options.txt
.github/workflows/: clang-format-check.yml  main.yml  valgrind.yml
include/dima/: derived.h  dima.h  eventually_failing.h  exiting_on_failure.h  failing.h  failure_hook.h  invocation.h  proxy.h  pthread_mutex_locked.h  randomly_failing.h  system.h
include/dima/proxy/: eventually_failing.h  failing.h  invocation.h  proxy.h  pthread_mutex_locked.h  randomly_failing.h
scripts/: clang-format-all.sh
src/: derived.c  dima.c  eventually_failing.c  exiting_on_failure.c  failing.c  failure_hook.c  invocation.c  proxy.c  pthread_mutex_locked.c  randomly_failing.c  size_bits.h  system.c
src/proxy/: eventually_failing.c  failing.c  invocation.c  proxy.c  pthread_mutex_locked.c  randomly_failing.c
tests/: derived_test.c  dima_test.c  eventually_failing_test.c  exiting_on_failure_test.c  failure_hook_test.c  forwarding_tests.c  forwarding_tests.h  invocations.c  invocations.h  powz.c  powz.h  powz_test.c  proxy_test.c  pthread_mutex_locked_test.c  randomly_failing_test.c  standard_tests.c  standard_tests.h  system_test.c  test.c  test.h
